# nydus-snapshotter

./: .gitignore  .golangci.yml  MAINTAINERS  Makefile  README.md  build.sh  build_nydus.sh  go.mod  go.sum  osv-scanner.toml
.codebase/pipelines/: ci.yaml
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  improvement-report.yml
.github/workflows/: ci.yml  e2e.yml  helm-e2e.yml  image.yml  k8s-e2e-run.yml  k8s-e2e.yml  optimizer.yml  release-dd.yml  (+2 more)
charts/: Chart.yaml  compatibility.csv  values.yaml  version.yaml
config/: config.go  config_test.go  daemonconfig.go  daemonconfig_test.go  default.go  global.go
converter/: converter.go  resolve.go  utils.go
docker/: Dockerfile
docs/: configure_nydus.md  index_detection.md  kubernetes_user_namespaces.md  opmitize_nydus_image.md  optimize_nydus_image.md  prefetchfiles-nri-plugin.md  registry_authentication.md  run_nydus_in_kubernetes.md  setup_snapshotter_by_daemonset.md  tarfs.md
documents/: crictl_dry_run.md
integration/: Dockerfile  entrypoint.sh
rpm/: nydus-snapshotter.fusedev.service
scripts/: repro_k3s_idmap_commit.sh
snapshot/: cleanup_queue.go  cleanup_queue_test.go  extra_option.go  mount_option.go  mount_option_test.go  pending_cull_tracker.go  pending_cull_tracker_test.go  process.go  renewal.go  renewal_test.go  snapshot.go  snapshot_linux.go  snapshot_other.go  snapshot_test.go  utils.go  utils_test.go
tests/: converter_test.go  nydusd.go
tools/optimizer-server/: Cargo.toml  Makefile
tools/optimizer-server/src/: main.rs
version/: version.go
(+396 files in other folders)
