[package]
name = "optimizer-server"
version = "0.1.0"
edition = "2021"
description = "Optimizer server to generate accessed files in target mount namespace"
authors = ["The Nydus Developers"]
license = "Apache-2.0 OR BSD-3-Clause"

[dependencies]
clap = "4.1.8"
lazy_static = "1.4.0"
libc = "0.2.140"
nix = "0.26.2"
serde = { version="1.0.198", features = ["derive"] }
serde_json = "1.0.116"
signal-hook = "0.3.15"
